--- a/Shopify.Web/Pages/ProductDetails.razor
+++ b/Shopify.Web/Pages/ProductDetails.razor
@@ -32,6 +32,7 @@ else
                         }))">
                     <b>Add to Cart</b>
                 </button>
+                <button @onclick="() => NavigateToMap(1)">Locate on Map</button>
             </div>
             
         </div>
