Dodawanie zamowien do bazy

--- a/Shopify.Web/Pages/Checkout.razor
+++ b/Shopify.Web/Pages/Checkout.razor
@@ -47,5 +47,6 @@
                 <p>You currently have no items in your shopping cart</p>
             }
         </div>
+        <MudButton @onclick="CreateOrder_Click"></MudButton>
 }
 </div>
