--- a/Shopify.Web/App.razor
+++ b/Shopify.Web/App.razor
@@ -1,4 +1,9 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿<head>
+    @*...*@
+    @DxResourceManager.RegisterScripts()
+    @*...*@
+</head>
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
