--- a/Shopify.Web/Layout/NavMenu.razor
+++ b/Shopify.Web/Layout/NavMenu.razor
@@ -21,15 +21,19 @@
 
         <ProductCategoriesNavMenu />
 
-        <MudButton OnClick="NavigateToOrders">View Orders</MudButton>
-
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="viewer">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Report Viewer
+            <NavLink class="nav-link" href="OrdersList">
+                <span class="fa-regular fa-file-lines" aria-hidden="true"></span> Orders List
             </NavLink>
         </div>
 
-        <div class="nav-item px-3 d-sm-none">
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="viewer/1">
+                <span class="fa-solid fa-file-invoice" aria-hidden="true"></span> Report Viewer
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="ShoppingCart">
                 <span class="fas fa-shopping-cart" aria-hidden="true"></span>&nbsp;Shopping Cart (<b>@shoppingCartItemsCount</b>)
             </NavLink>
