--- a/Shopify.Web/Layout/ProductCategoriesNavMenu.razor
+++ b/Shopify.Web/Layout/ProductCategoriesNavMenu.razor
@@ -10,7 +10,7 @@ else
 {
     @foreach(var productCategory in ProductCategoryDtos)
     {
-        var link = "/ProductsByCategory/" + productCategory.Id;
+        var link = "/ProductsByShop/" + productCategory.Id;
         
         <div class = "nav-item px-3">
             <NavLink class="nav-link" href="@link">
