--- a/Shopify.Web/Pages/Products.razor
+++ b/Shopify.Web/Pages/Products.razor
@@ -16,7 +16,7 @@ else
             {
                 <h4>@GetCategoryName(prodGroup)</h4>
                 <div class="row mt-3"> 
-                    <DisplayProducts ProductsList="@prodGroup.Take(4)"></DisplayProducts>
+                    <DisplayProducts ProductsList="@prodGroup"></DisplayProducts>
                 </div>
                 <hr class="mb-3"/>
             }
