--- a/Shopify.Web/Pages/ShopMaps/ShoesShopMap.razor
+++ b/Shopify.Web/Pages/ShopMaps/ShoesShopMap.razor
@@ -29,6 +29,12 @@
                     <rect x="60" y="60" width="60" height="120" fill="#522f0e" />
                     <text x="90" y="120" fill="white" font-size="16" font-family="Arial" text-anchor="middle" dominant-baseline="middle">Cash</text>
 
+                    <!-- Screen -->
+                    <rect x="555" y="330" width="40" height="30" rx="5" ry="5" fill="blue" stroke="black" stroke-width="2" />
+                    <rect x="558" y="333" width="34" height="24" fill="lightblue" stroke="none" />
+                    <text x="575" y="375" fill="black" font-size="16" font-family="Arial" text-anchor="middle">Screen</text>
+
+
                     <!-- Shelves -->
                     @foreach (var shelf in Shelves)
                     {
