--- a/Shopify.Web/Reports/ReportViewer.razor
+++ b/Shopify.Web/Reports/ReportViewer.razor
@@ -8,7 +8,7 @@
 
 <h3>Report Viewer</h3>
 
-<DxReportViewer @ref="reportViewer" Report="@Report">
+<DxReportViewer @ref="reportViewer" >
 </DxReportViewer>
 
 <MudButton OnClick="GoBack" Color="Color.Primary">Back</MudButton>
