--- a/Shopify.Web/Layout/NavMenu.razor
+++ b/Shopify.Web/Layout/NavMenu.razor
@@ -19,7 +19,7 @@
             </NavLink>
         </div>
 
-        <ProductCategoriesNavMenu />
+        @* <ProductCategoriesNavMenu /> *@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="OrdersList">
