--- a/Shopify.Web/Pages/ProductDetails.razor
+++ b/Shopify.Web/Pages/ProductDetails.razor
@@ -2,40 +2,86 @@
 
 @if (Product == null && ErrorMessage == null)
 {
-    <DisplaySpinner/>
+	<DisplaySpinner />
 }
 else if (ErrorMessage != null)
 {
-    <DisplayError ErrorMessage="@ErrorMessage"></DisplayError>
+	<DisplayError ErrorMessage="@ErrorMessage"></DisplayError>
 }
 else
 {
-    <h3 class="mb-5">Product Details</h3>
-    <div class="row">
-        <div class="col-md-6 mb-4">
-            <img class="img-fluid" src="@Product.ProductImageURL">       
-        </div>
-        <div class="col-md-6">
-            <h3>@Product.ProductName</h3>
-            <p class="mb-4">@Product.ProductDescription</p>
-            <p class="mb-4">
-                <b>
-                    @Product.ProductPrice.ToString("C")&nbsp;(@Product.ProductQuantity items in stock)
-                </b>
-            </p>
-            <div>
-                <MudButton @onclick="() => (AddToCart_Click(new CartItemToAddDto{
+	<h3 class="mb-5">Product Details</h3>
+	<div class="row">
+		<div class="col-md-6 mb-4">
+			<img class="img-fluid" src="@Product.ProductImageURL">
+		</div>
+		<div class="col-md-6">
+			<h3>@Product.ProductName</h3>
+			<p class="mb-4">@Product.ProductDescription</p>
+			<p class="mb-4">
+				<b>
+					@Product.ProductPrice.ToString("C")&nbsp;(@Product.ProductQuantity items in stock)
+				</b>
+			</p>
+			<div>
+				<MudText>Average rating: <MudRating SelectedValue="@AverageRating" ReadOnly="true" /></MudText>
+
+				<MudButton @onclick="() => (AddToCart_Click(new CartItemToAddDto{
                         CartId = HardCoded.CartId,
                         ProductId = Product.Id,
                         ProductQuantity = 1
                         }))" Variant=" Variant.Filled" Color="Color.Primary">Add to cart</MudButton>
-                @if(Product.ShopId != 3)
-                {
-                    <MudButton @onclick="NavigateToMap" Variant="Variant.Filled" Color="Color.Secondary">Show on shelves</MudButton>
-                }
-            </div>
-            
-        </div>
+				@if (Product.ShopId != 3)
+				{
+					<MudButton @onclick="NavigateToMap" Variant="Variant.Filled" Color="Color.Secondary">Show on shelves</MudButton>
+				}
+			</div>
 
-    </div>
+		</div>
+
+	</div>
+
+	<MudCard>
+		<MudItem xs="6">
+			<MudCardContent>
+				<MudStack Row Spacing="2">
+					<MudTextField Label="Your Review" @bind-Value="newReview.ReviewText" FullWidth="true" />
+					<MudRating @bind-SelectedValue="newReview.Rating" MaxValue="5" Size="@Size.Medium" />
+					<MudButton OnClick="SubmitReview" Color="Color.Primary" Variant="Variant.Filled">Submit</MudButton>
+				</MudStack>
+			</MudCardContent>
+		</MudItem>
+	</MudCard>
+
+	@if (!productReviews.Any())
+	{
+		<MudAlert Severity="Severity.Info" Elevation="0">
+			No reviews have been added for this product yet.
+		</MudAlert>
+	}
+	else
+	{
+		<MudDataGrid Items="@productReviews" Filterable="false" SortMode="@SortMode.None" Groupable="false">
+			<Columns>
+				<PropertyColumn Property="x => x.UserName" />
+				<PropertyColumn Property="x => x.ReviewText" Title="Opinion" />
+				<PropertyColumn Property="x => x.CreatedAt" />
+				<TemplateColumn CellClass="d-flex justify-end">
+					<CellTemplate>
+						<MudStack Row>
+							<MudRating Size="@Size.Small" ReadOnly="true" SelectedValue="@context.Item.Rating" />
+						</MudStack>
+					</CellTemplate>
+				</TemplateColumn>
+				<TemplateColumn>
+					<CellTemplate>
+						<MudButton Color="Color.Error" Variant="Variant.Filled" OnClick="@(() => DeleteReview(context.Item.Id))">
+							Delete
+						</MudButton>
+					</CellTemplate>
+				</TemplateColumn>
+			</Columns>
+		</MudDataGrid>
+	}
+
 }
