--- a/Shopify.Web/Pages/ProductDetails.razor
+++ b/Shopify.Web/Pages/ProductDetails.razor
@@ -13,7 +13,14 @@ else
 	<h3 class="mb-5">Product Details</h3>
 	<div class="row">
 		<div class="col-md-6 mb-4">
-			<img class="img-fluid" src="@Product.ProductImageURL">
+			@if (Product.ProductImage != null && Product.ProductImage.Length > 0)
+			{
+				<img class="img-thumbnail" src="@GetProductImageBase64(@Product.ProductImage)" />
+			}
+			else
+			{
+				<img class="img-thumbnail" src="nophoto.png" />
+			}
 		</div>
 		<div class="col-md-6">
 			<h3>@Product.ProductName</h3>
