--- a/Shopify.Web/Pages/ShoppingCart.razor
+++ b/Shopify.Web/Pages/ShoppingCart.razor
@@ -19,7 +19,14 @@ else
             {
                 <div class="row mb-4">
                     <div class="col-md-4">
-                        <img src="@item.ProductImageURL" width="300" class="img-thumbnail">
+                            @if (item.ProductImage != null && item.ProductImage.Length > 0)
+                            {
+                                <img class="img-thumbnail" width="300" src="@GetProductImageBase64(item.ProductImage)" />
+                            }
+                            else
+                            {
+                                <img class="img-thumbnail" width="300" src="nophoto.png" />
+                            }
                     </div>
                     <div class = "col-md-8">
                         <h5>@item.ProductName</h5>
