--- a/Shopify.Web/Pages/Checkout.razor
+++ b/Shopify.Web/Pages/Checkout.razor
@@ -1,12 +1,14 @@
 ﻿@page "/Checkout"
 
+@using System.Globalization
+
 <h3 class="mb-5">Checkout</h3>
 <div class="row">
     <div class="col-md-6" style="display:@DisplayButtons" >
         <h4 class="mb-2">Payment Method</h4>
         <div id="smart-button-container">
             <input type="hidden" name="descriptionInput" id="description" @bind="PaymentDescription" />
-            <input name="amountInput" type="hidden" id="amount" @bind="PaymentAmount">
+            <input name="amountInput" type="hidden" id="amount" value="@PaymentAmount.ToString("F2", CultureInfo.InvariantCulture)">
             <div style="text-align: center; margin-top: 0.625rem;" id="paypal-button-container"></div>
         </div>
     </div>
