--- a/Shopify.Web/Pages/Dialogs/AddProductDialog.razor
+++ b/Shopify.Web/Pages/Dialogs/AddProductDialog.razor
@@ -21,7 +21,7 @@
 	</DialogContent>
 
 	<DialogActions>
-		<MudButton Color="Color.Primary" OnClick="Submit">Add</MudButton>
+		<MudButton Color="Color.Primary" OnClick="Submit">@SubmitText</MudButton>
 		<MudButton OnClick="Cancel">Cancel</MudButton>
 	</DialogActions>
 </MudDialog>
