--- a/Shopify.Web/Pages/ProductsByShop.razor
+++ b/Shopify.Web/Pages/ProductsByShop.razor
@@ -15,7 +15,7 @@ else
     @if(Products.Count() > 0)
     {
         <div class = "row mt-3">
-          <DisplayProducts Products = "@Products"></DisplayProducts>
+            <DisplayProducts ProductsList="@Products"></DisplayProducts>
         </div>
     }
 
