--- a/Shopify.Web/Layout/MainLayout.razor
+++ b/Shopify.Web/Layout/MainLayout.razor
@@ -26,8 +26,13 @@
             @if (isUserAuthenticated)
             {
                 <span>Logged as: @userName</span>
+                <span>@isAdmin</span>
+			    <CartMenu />
             }
-			<CartMenu />
+            else
+            {
+                <MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="Register">Register</MudButton>
+            }
 			@if (isUserAuthenticated)
 			{
 				<div class="user-info">
@@ -53,6 +58,7 @@
     private string userName = string.Empty;
     private string firstName = string.Empty;
     private string lastName = string.Empty;
+    private bool isAdmin;
 
     protected override async Task OnInitializedAsync()
     {
@@ -67,6 +73,7 @@
         var token = await LocalStorage.GetItemAsync<string>("access_token");
         isUserAuthenticated = false;
         userName = "";
+        isAdmin = false;
 
         if (!string.IsNullOrEmpty(token))
         {
@@ -78,6 +85,9 @@
                 firstName = jwtToken.Claims.FirstOrDefault(c => c.Type == "firstName")?.Value ?? "";
                 lastName = jwtToken.Claims.FirstOrDefault(c => c.Type == "lastName")?.Value ?? "";
                 userName = $"{firstName} {lastName}";
+
+                var isAdminClaim = jwtToken.Claims.FirstOrDefault(c => c.Type == "isAdmin")?.Value;
+                isAdmin = bool.TryParse(isAdminClaim, out var result) && result;
 
                 isUserAuthenticated = true;
             }
@@ -98,6 +108,10 @@
     private void Login()
     {
         NavigationManager.NavigateTo("account/login");
+    }
+    private void Register()
+    {
+        NavigationManager.NavigateTo("account/register");
     }
 
     private async Task Logout()
