--- a/Shopify.Web/Pages/OrdersList.razor
+++ b/Shopify.Web/Pages/OrdersList.razor
@@ -1,20 +1,27 @@
 ﻿@page "/OrdersList"
 
 <MudTable Items="orders" Dense="true" Hover="true" Bordered="true" Striped="true">
-    <HeaderContent>
-        <MudTh>User Name</MudTh>
-        <MudTh>Date</MudTh>
-        <MudTh>Shop Name</MudTh>
-        <MudTh>Total Price</MudTh>
-        <MudTh>Show Order</MudTh>
-    </HeaderContent>
-    <RowTemplate Context="order">
-        <MudTd>@order.UserName</MudTd>
-        <MudTd>@order.OrderDate.ToString("yyyy-MM-dd")</MudTd>
-        <MudTd>@order.ShopName</MudTd>
-        <MudTd>@order.TotalPrice.ToString("C")</MudTd>
-        <MudTd>
-            <MudIconButton Icon="@Icons.Material.Filled.DocumentScanner" OnClick="() => ShowReport(order.Id)" />
-        </MudTd>
-    </RowTemplate>
+	<HeaderContent>
+		<MudTh>User Name</MudTh>
+		<MudTh>Date</MudTh>
+		<MudTh>Shop Name</MudTh>
+		<MudTh>Total Price</MudTh>
+		<MudTh>Realised</MudTh>
+		<MudTh>Actions</MudTh>
+	</HeaderContent>
+	<RowTemplate Context="order">
+		<MudTd>@order.UserName</MudTd>
+		<MudTd>@order.OrderDate.ToString("yyyy-MM-dd")</MudTd>
+		<MudTd>@order.ShopName</MudTd>
+		<MudTd>@order.TotalPrice.ToString("C")</MudTd>
+		<MudTd><MudCheckBox ReadOnly="true" Value="@order.IsRealised"></MudCheckBox></MudTd>
+		<MudTd>
+			<MudIconButton Icon="@Icons.Material.Filled.DocumentScanner" OnClick="() => ShowReport(order.Id)" />
+			@if (!order.IsRealised)
+			{
+				<MudIconButton Color="Color.Success" Icon="@Icons.Material.Filled.Check" OnClick="() => ConfirmMarkAsRealised(order.Id)" />
+			}
+
+		</MudTd>
+	</RowTemplate>
 </MudTable>
