--- a/Shopify.Web/Pages/ProductDetails.razor
+++ b/Shopify.Web/Pages/ProductDetails.razor
@@ -11,8 +11,12 @@ else if (ErrorMessage != null)
 else
 {
 	<h3 class="mb-5">Product Details</h3>
-	<MudButton OnClick="OpenEditProductDialog" Color="Color.Info" Variant="Variant.Filled">Edit Product</MudButton>
-	<MudButton OnClick="ConfirmDeleteProduct" Color="Color.Error" Variant="Variant.Filled">Delete Product</MudButton>
+	@if(isAdmin)
+	{
+		<MudButton OnClick="OpenEditProductDialog" Color="Color.Info" Variant="Variant.Filled">Edit Product</MudButton>
+		<MudButton OnClick="ConfirmDeleteProduct" Color="Color.Error" Variant="Variant.Filled">Delete Product</MudButton>
+	}
+
 
 	<div class="row">
 		<div class="col-md-6 mb-4">
