--- a/Shopify.Web/Pages/Products.razor
+++ b/Shopify.Web/Pages/Products.razor
@@ -7,9 +7,12 @@
 else
 {
     <h3>Products</h3>
-    <MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="OpenAddProductDialog">
-        Add New Product
-    </MudButton>
+    	@if(isAdmin){
+        <MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="OpenAddProductDialog">
+            Add New Product
+        </MudButton>
+        }
+
 
 
     var productCount = ProductsList.Count();
