--- a/Shopify.Web/Pages/OrdersList.razor
+++ b/Shopify.Web/Pages/OrdersList.razor
@@ -21,7 +21,7 @@
 			{
 				<MudIconButton Color="Color.Success" Icon="@Icons.Material.Filled.Check" OnClick="() => ConfirmMarkAsRealised(order.Id)" />
 			}
-
+			<MudIconButton Color="Color.Error" Icon="@Icons.Material.Filled.Delete" OnClick="() => ShowReport(order.Id)" />
 		</MudTd>
 	</RowTemplate>
 </MudTable>
