--- a/Shopify.Web/Layout/NavMenu.razor
+++ b/Shopify.Web/Layout/NavMenu.razor
@@ -34,11 +34,14 @@
                 </NavLink>
             </div>
         }
+        @if (isAdmin)
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="ShoppingCart">
+                    <span class="fas fa-shopping-cart" aria-hidden="true"></span>&nbsp;Shopping Cart (<b>@shoppingCartItemsCount</b>)
+                </NavLink>
+            </div>
+        }
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="ShoppingCart">
-                <span class="fas fa-shopping-cart" aria-hidden="true"></span>&nbsp;Shopping Cart (<b>@shoppingCartItemsCount</b>)
-            </NavLink>
-        </div>
     </nav>
 </div>
